--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,7 @@
   <%= render @incomplete_tasks %>
 </div>
 
-<h2>Comlpete Tasks</h2>
+<h2>Complete Tasks</h2>
 <div class="tasks" id="complete_tasks">
   <%= render @complete_tasks %>
 </div>
